# bookstore-project

./: README.md  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
